syntax = "proto3";

package contractors_pricing;

// ===================================================
// SERVICE DEFINITION
// ===================================================
service ContractorsPricingService {
  // Used by the Admin Dashboard to create/update rules
  rpc UpsertRule (CreatePriceUnitRuleRequest) returns (BasePriceRuleResponse);
  
  // Used by the Mobile/Web Frontend to get validation rules for the form
  rpc GetPricingMetadata (GetPricingMetadataRequest) returns (PricingMetadataResponse);
  
  // Admin view for all rules
  rpc GetAllRules (Empty) returns (ListPriceRulesResponse);
  
  // Toggle rule status
  rpc ToggleRule (ToggleRuleRequest) returns (BasePriceRuleResponse);
}

// ===================================================
// SHARED MESSAGES
// ===================================================
message Empty {}

message ErrorPayload {
  string code = 1;
  string message = 2;
  string details = 3;
}

// ===================================================
// ENTITIES
// ===================================================
message PriceUnitRule {
  string id = 1;
  string vertical = 2;
  string unit = 3;
  string currency = 4; // Added currency field
  optional string categorySlug = 5; 
  
  float minPrice = 6;
  optional float maxPrice = 7;
  
  bool isExperienceRequired = 8;
  bool isNotesRequired = 9;
  bool isActive = 10;
  string createdAt = 11;
}

message PricingMetadataItem {
  string unit = 1;
  string currency = 2; // Added currency field
  optional string categorySlug = 3;
  float min = 4;
  optional float max = 5;
  bool experienceRequired = 6;
  bool notesRequired = 7;
}

// ===================================================
// REQUEST MESSAGES
// ===================================================
message CreatePriceUnitRuleRequest {
  string vertical = 1;
  string unit = 2;
  string currency = 3; // Added currency field
  optional string categorySlug = 4;
  float minPrice = 5;
  optional float maxPrice = 6;
  bool isExperienceRequired = 7;
  bool isNotesRequired = 8;
  bool isActive = 9;
}

message GetPricingMetadataRequest {}

message ToggleRuleRequest {
  string id = 1;
  bool active = 2;
}

// ===================================================
// RESPONSE MESSAGES
// ===================================================
message BasePriceRuleResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  PriceUnitRule data = 4;
  ErrorPayload error = 5;
}

message ListPriceRulesResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  repeated PriceUnitRule data = 4;
  ErrorPayload error = 5;
}

message PricingMetadataResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  PricingMetadataData data = 4; 
  ErrorPayload error = 5;
}

message PricingMetadataData {
  map<string, VerticalRuleList> verticals = 1;
}

message VerticalRuleList {
  repeated PricingMetadataItem rules = 1;
}